// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CmsLogo renders correctly with center positioning 1`] = `
<div>
  <img
    alt="foo"
    class="justify-center mb-4 max-h-[160px]"
    src="/foo.svg"
  />
</div>
`;

exports[`CmsLogo renders correctly with default left positioning 1`] = `
<div>
  <img
    alt="foo"
    class="justify-left mb-4 max-h-[40px]"
    src="/foo.svg"
  />
</div>
`;
